--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -92,6 +92,8 @@ $menu-item-active-color: $kaldi-red-invert
 $menu-item-active-background-color:	$kaldi-red-invert
 $menu-list-border-left: 1px solid $kaldi-red-invert
 $menu-label-color: $white-ter
+// nav bar overrides
+$navbar-item-color:$white-ter
 
 
 .menu-label
