--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,7 +2,7 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #00BFFF
+$kaldi-red: #D64000
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
@@ -92,8 +92,7 @@ $menu-item-active-color: $kaldi-red-invert
 $menu-item-active-background-color:	$kaldi-red-invert
 $menu-list-border-left: 1px solid $kaldi-red-invert
 $menu-label-color: $white-ter
-// nav bar overrides
-$navbar-item-color:$white-ter
+
 
 
 .menu-label
