--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -43,8 +43,9 @@ $black: #2b2523
   align-items: center
 
 .full-width-image
-    width: 100vw
-    height: 400px
+    width: 100%
+    height: 100%
+    object-fit: contain
     background-size: cover
     background-position: bottom
     display: flex
