--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -43,6 +43,8 @@ $black: #2b2523
   align-items: center
 
 .full-width-image
+    width: 100vw
+    height: 400px
     background-size: cover
     background-position: bottom
     display: flex
