--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -62,10 +62,10 @@ $grey: #005746
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: #0f9346
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
+    -webkit-box-shadow: inset 0 0 0 2px #0f9346
+    box-shadow: inset 0 0 0 2px #005746
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
