--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -116,7 +116,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033;
+  background-color: #0f9346;
 .blog-list-item header
   display: flex;
   margin-bottom: 1em;
